[gd_scene load_steps=4 format=2]

[ext_resource path="res://scenes/objects/gate.tscn" type="PackedScene" id=1]
[ext_resource path="res://scenes/player/player.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/levels/level.gd" type="Script" id=4]

[node name="Level" type="Node2D"]
script = ExtResource( 4 )

[node name="Gate" parent="." instance=ExtResource( 1 )]

[node name="Player" parent="." instance=ExtResource( 3 )]
position = Vector2( 492, 386 )

[connection signal="player_entered_gate" from="Gate" to="." method="_on_Gate_player_entered_gate"]
[connection signal="grenade" from="Player" to="." method="_on_Player_grenade"]
[connection signal="laser" from="Player" to="." method="_on_Player_laser"]
